log
Thu 18 Aug 2022 01:50:35 PM UTC: 
 tests:  0|6
total_score: 0/70
b584c3e
Thu 18 Aug 2022 04:52:59 PM UTC: 
 list.c | 24 +++++++++++++++++++-----
 1 file changed, 19 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:18: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
   32 |   List* lista = (list*)calloc(1,sizeof(List));
      |                  ^~~~
      |                  lista
list.c:32:18: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:23: error: expected expression before ‘)’ token
   32 |   List* lista = (list*)calloc(1,sizeof(List));
      |                       ^
Compilation failed
5e737b2
Thu 18 Aug 2022 04:53:50 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
bef85c3
Thu 18 Aug 2022 04:55:06 PM UTC: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  0|0
c09a64e
Thu 18 Aug 2022 04:59:20 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
0bd6fa2
Thu 18 Aug 2022 05:00:01 PM UTC: 
 list.c | 9 ++-------
 1 file changed, 2 insertions(+), 7 deletions(-)
 tests:  0|0
c40f8e5
Thu 18 Aug 2022 05:00:22 PM UTC: 
 list.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
af84285
Thu 18 Aug 2022 06:27:44 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:38:25: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   38 |     list->current = list->prev;
      |                         ^~
Compilation failed
1390e85
Thu 18 Aug 2022 06:28:07 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
38bbb51
Thu 18 Aug 2022 06:29:31 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
940562a
Thu 18 Aug 2022 06:30:44 PM UTC: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  0|0
c5dd3c1
Thu 18 Aug 2022 06:31:20 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:30: error: invalid operands to binary != (have ‘Node’ and ‘void *’)
   37 |   while(*list->current->prev != NULL){
      |         ~~~~~~~~~~~~~~~~~~~~ ^~
      |         |
      |         Node
Compilation failed
24b2113
Thu 18 Aug 2022 06:31:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
de509fd
Thu 18 Aug 2022 06:36:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1a30c10
Thu 18 Aug 2022 06:37:27 PM UTC: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:3: error: format not a string literal and no format arguments [-Werror=format-security]
   37 |   printf(list->current->data);
      |   ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
4160261
Thu 18 Aug 2022 06:37:56 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  0|0
4e7f81d
Thu 18 Aug 2022 06:39:30 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:37:38: error: expected ‘;’ before ‘while’
   37 |   list->current = list->current->prev
      |                                      ^
      |                                      ;
   38 |   while(list->current != NULL){
      |   ~~~~~                               
Compilation failed
7ed23e7
Thu 18 Aug 2022 06:39:37 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5f1cf93
Thu 18 Aug 2022 06:45:50 PM UTC: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
d7416bc
Fri 19 Aug 2022 12:17:53 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
ab10c8b
